[FIX] web_editor: tablepicker size not visible
Current behaviour before commit:

In tablepicker, number of the selected cells (rows X cols)
is not visible at the bottom.

Desired behaviour after commit:

Now, number of the selected cells is visible at the bottom of
tablepicker.

task-3662728

--- a/addons/web_editor/static/src/js/editor/odoo-editor/src/style.scss
+++ b/addons/web_editor/static/src/js/editor/odoo-editor/src/style.scss
@@ -299,9 +299,6 @@
     text-align: center;
     margin-top: 7px;
 }
-.oe-tablepicker-size {
-    color: white;
-}
 
 @include media-breakpoint-down(md) {
     .oe-toolbar {
